--- a/client/index.html
+++ b/client/index.html
@@ -211,21 +211,39 @@
 			</div>
 			<div class="rightbar-tabs tabs" id="member-tabs"> </div>		<div class="members" id="member-list"> </div>		</div>	</div>
 	<script type="module" src="./js/main.js"></script>
-	<script>
-// 页面加载时自动填充 roomName 输入框
+	<!-- 自动填充 roomUUID 和 user 的脚本 -->
+<script>
 window.addEventListener('DOMContentLoaded', () => {
   const params = new URLSearchParams(window.location.search);
-  const roomUUID = params.get('roomUUID'); // 获取 URL 参数
+  const roomUUID = params.get('roomUUID');
+  const user = params.get('user');
+
+  // 填充房间 UUID
   if (roomUUID) {
-    const input = document.getElementById('roomName');
-    if (input) {
-      input.value = roomUUID; // 填入输入框
-      // 如果页面用 Vue/React/监听器，需要触发 input 事件
-      input.dispatchEvent(new Event('input', { bubbles: true }));
+    const roomInput = document.getElementById('roomName');
+    if (roomInput) {
+      roomInput.value = roomUUID;
+      roomInput.dispatchEvent(new Event('input', { bubbles: true }));
     }
   }
+
+  // 填充用户名
+  if (user) {
+    // 假设用户名输入框 id 为 username（或者根据你的页面实际改）
+    const userInput = document.getElementById('username');
+    if (userInput) {
+      userInput.value = user;
+      userInput.dispatchEvent(new Event('input', { bubbles: true }));
+    }
+  }
+
+  // 可选：如果你的页面有自动提交或进入聊天室逻辑，可以在这里触发
+  // 例如自动点击“进入聊天室”按钮
+  // const enterBtn = document.getElementById('enterBtn');
+  // if (enterBtn && roomUUID && user) enterBtn.click();
 });
 </script>
+
 
 </body>
 </html>
